--- a/style.scss
+++ b/style.scss
@@ -1,289 +1,1090 @@
----
+
 ---
 
+
+
+
+---
+
+
+
+
+
+
+
 //
+
+
 // IMPORTS
+
+
 //
+
+
+
+
+
+
 
 @import "reset";
+
+
 @import "variables";
+
+
 // Syntax highlighting @import is at the bottom of this file
 
+
+
+
+
+
+
 /**************/
+
+
 /* BASE RULES */
+
+
 /**************/
+
+
+
+
+
+
 
 html {
-  font-size: 100%;
+
+
+ font-size: 100%;
+
+
 }
+
+
+
+
+
+
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
-  color: $darkGray;
+
+
+ background-image: url(https://i.pinimg.com/originals/10/61/34/10613476b3c02e0eab3d22e130659c06.jpg);
+
+
+ background-attachment: fixed;
+
+
+ font: 18px/1.4 $helvetica;
+
+
+ color: #ff0000; 
+
+
 }
+
 
 .container {
-  margin: 0 auto;
-  max-width: 740px;
-  padding: 0 10px;
-  width: 100%;
+
+
+
+
+
+
+
+ box-shadow: 20px 20px 10px rgba(255, 255, 0, 0.7);
+
+
+ margin: 0 auto;
+
+
+ max-width: 850px;
+
+
+ padding: 0 10px;
+
+
+ width: 100%;
+
+
+ background: linear-gradient(rgba(255, 255, 0, 0.72), rgba(255, 255, 0, 0.72));
+
+
+ border-radius: 25px;
+
+
+ padding: 20px;
+
+
+ border-bottom: 1.5px rgb(0, 255, 255);
+
+
 }
+
+
+
+
+
+
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
-  color: $darkerGray;
-  font-weight: bold;
 
-  line-height: 1.7;
-  margin: 1em 0 15px;
-  padding: 0;
 
-  @include mobile {
-    line-height: 1.4;
-  }
+ font-family: $helveticaNeue;
+
+
+ color: #0000e6;
+
+
+ font-weight: bold;
+
+
+	
+
+
+ line-height: 1.7;
+
+
+ margin: 1em 0 15px;
+
+
+ padding: 0;
+
+
+
+
+
+
+
+ @include mobile {
+
+
+ line-height: 1.4;
+
+
+ }
+
+
 }
+
+
+
+
+
+
 
 h1 {
-  font-size: 30px;
-  a {
-    color: inherit;
-  }
-}
 
-h2 {
-  font-size: 24px;
-}
 
-h3 {
-  font-size: 20px;
-}
+ font-size: 30px;
 
-h4 {
-  font-size: 18px;
-  color: $gray;
-}
-
-p {
-  margin: 15px 0;
-}
 
 a {
-  color: $blue;
-  text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
-    color: $blue;
-  }
+
+
+ color: inherit;
+
+
+ }
+
+
 }
+
+
+
+
+
+
+
+h2 {
+
+
+ font-size: 24px;
+
+
+}
+
+
+
+
+
+
+
+h3 {
+
+
+ font-size: 20px;
+
+
+}
+
+
+
+
+
+
+
+h4 {
+
+
+ font-size: 18px;
+
+
+ color: #0000e6;
+
+
+}
+
+
+
+
+
+
+
+p {
+
+
+ margin: 15px 0;
+
+
+}
+
+
+
+
+
+
+
+a {
+
+
+ color: #0000e6;
+
+
+ text-decoration: none;
+
+
+ cursor: pointer;
+
+
+ &:hover, &:active {
+
+
+ color: #ff0000;
+
+
+ }
+
+
+}
+
+
+
+
+
+
 
 ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
+
+
+ margin: 15px 0;
+
+
+ padding-left: 30px;
+
+
 }
+
+
+
+
+
+
 
 ul {
-  list-style-type: disc;
+
+
+ list-style-type: disc;
+
+
 }
+
+
+
+
+
+
 
 ol {
-  list-style-type: decimal;
+
+
+ list-style-type: decimal;
+
+
 }
+
+
+
+
+
+
 
 ol ul, ul ol, ul ul, ol ol {
-  margin: 0;
+
+
+ margin: 0;
+
+
 }
+
+
+
+
+
+
 
 ul ul, ol ul {
-  list-style-type: circle;
+
+
+ list-style-type: circle;
+
+
 }
+
+
+
+
+
+
 
 em, i {
-  font-style: italic;
+
+
+ font-style: italic;
+
+
 }
+
+
+
+
+
+
 
 strong, b {
-  font-weight: bold;
+
+
+ font-weight: bold;
+
+
 }
+
+
+
+
+
+
 
 img {
-  max-width: 100%;
+
+
+ max-width: 100%;
+
+
 }
+
+
+
+
+
+
+
+table {
+
+
+   width: 100%;
+
+
+}
+
+
+
+
+
+
+
+th {
+
+
+  color: black;
+
+
+  background: rgba(255, 255, 0, 0.6);
+
+
+  height:50px;
+
+
+  vertical-align: middle;
+
+
+}
+
+
+
+
+
+
+
+table, th, td {
+
+
+  border: 2px solid black;
+
+
+  background-color:rgba(255, 255, 0, 0.6);
+
+
+}
+
+
+
+
+
+
+
+table {
+
+
+   border-collapse: collapse;
+
+
+}
+
+
+
+
+
+
+
+th, td {
+
+
+   padding: 15px;
+
+
+   text-align: left;
+
+
+}
+
+
+
+
+
+
+
+td {
+
+
+   vertical-align: center;
+
+
+}
+
+
+
+
+
+
 
 // Fixes images in popup boxes from Google Translate
+
+
 .gmnoprint img {
-  max-width: none;
+
+
+   max-width: none;
+
+
 }
+
+
+
+
+
+
 
 .date {
-  font-style: italic;
-  color: $gray;
+
+
+   font-style: italic;
+
+
+   color: #ff0000;
+
+
 }
+
+
+
+
+
+
 
 // Specify the color of the selection
+
+
 ::-moz-selection {
-  color: $black;
-  background: $lightGray;
+
+
+ color: #0000e6;
+
+
+ background: $lightGray;
+
+
 }
+
+
 ::selection {
-  color: $black;
-  background: $lightGray;
+
+
+ color: #0000e6;
+
+
+ background: $lightGray;
+
+
 }
+
+
+
+
+
+
 
 // Nicolas Gallagher's micro clearfix hack
+
+
 // http://nicolasgallagher.com/micro-clearfix-hack/
+
+
 .clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
+
 
 .clearfix:after {
-    clear: both;
+
+
+   content: " ";
+
+
+   display: table;
+
+
 }
+
+
+
+
+
+
+
+.clearfix:after {
+
+
+   clear: both;
+
+
+}
+
+
+
+
+
+
 
 /*********************/
+
+
 /* LAYOUT / SECTIONS */
+
+
 /*********************/
 
+
+
+
+
+
+
 //
+
+
 // .masthead
+
+
 //
+
+
+
+
+
+
 
 .wrapper-masthead {
-  margin-bottom: 50px;
+
+
+ margin-bottom: 50px;
+
+
 }
+
+
+
+
+
+
 
 .masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
 
-  @include mobile {
-    text-align: center;
-  }
+
+ padding: 20px 0;
+
+
+ border-bottom: 1px solid $lightGray;
+
+
+
+
+
+
+
+ @include mobile {
+
+
+   text-align: center;
+
+
+ }
+
+
 }
+
+
+
+
+
+
 
 .site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
 
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
 
-  img {
-    border-radius: 5px;
-  }
+ float: left;
+
+
+ width: 150px;
+
+
+ height: 150px;
+
+
+ margin-right: 15px;
+
+
+
+
+
+
+
+ @include mobile {
+
+
+   float: none;
+
+
+   display: block;
+
+
+   margin: 0 auto;
+
+
+ }
+
+
+
+
+
+
+
+ img {
+
+
+   border-radius: 5px;
+
+
+ }
+
+
 }
+
+
+
+
+
+
 
 .site-info {
-  float: left;
 
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
+
+ float: left;
+
+
+
+
+
+
+
+ @include mobile {
+
+
+   float: none;
+
+
+   display: block;
+
+
+   margin: 0 auto;
+
+
+ }
+
+
 }
+
+
+
+
+
+
 
 .site-name {
-  margin: 0;
-  color: $darkGray;
-  cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
+
+
+ margin: 0;
+
+
+ color: #0000e6;
+
+
+ cursor: pointer;
+
+
+ font-family: $helveticaNeue;
+
+
+ font-weight: 300;
+
+
+ font-size: 28px;
+
+
+ letter-spacing: 1px;
+
+
 }
+
+
+
+
+
+
 
 .site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
 
-  @include mobile {
-    margin: 3px 0;
-  }
+
+ margin: -5px 0 0 0;
+
+
+ color: #00ffff;
+
+
+ font-size: 16px;
+
+
+
+
+
+
+
+ @include mobile {
+
+
+   margin: 3px 0;
+
+
+ }
+
+
 }
+
+
+
+
+
+
 
 nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
-  font-size: 18px;
 
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
 
-  a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
+ float: right;
 
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
-    }
-  }
+
+ margin-top: 23px; // @TODO: Vertically middle align
+
+
+ font-family: $helveticaNeue;
+
+
+ font-size: 18px;
+
+
+
+
+
+
+
+ @include mobile {
+
+
+   float: none;
+
+
+   margin-top: 9px;
+
+
+   display: block;
+
+
+   font-size: 16px;
+
+
+ }
+
+
+
+
+
+
+
+ a {
+
+
+   margin-left: 20px;
+
+
+   color: #0000e6;
+
+
+   text-align: right;
+
+
+   font-weight: 300;
+
+
+   letter-spacing: 1px;
+
+
+
+
+
+
+
+   @include mobile {
+
+
+     margin: 0 10px;
+
+
+     color: #0000e6;
+
+
+   }
+
+
+ }
+
+
 }
 
+
+
+
+
+
+
 //
+
+
 // .main
+
+
 //
+
+
+
+
+
+
 
 .posts > .post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
+
+
+ padding: 2px;
+
+
+ border-bottom: 1px solid $lightGray;
+
+
 }
+
+
+
+
+
+
 
 .posts > .post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
+
+
+ padding-bottom: 1em;
+
+
+ border-bottom: none;
+
+
 }
+
+
+
+
+
+
 
 .post {
-  blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
-    font-style: italic;
-  }
 
-  .comments {
-    margin-top: 10px;
-  }
 
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
-  }
+ blockquote {
+
+
+   margin: 1.8em .8em;
+
+
+   border-left: 2px solid $gray;
+
+
+   padding: 0.1em 1em;
+
+
+   color: #0000e6;
+
+
+   font-size: 22px;
+
+
+   font-style: italic;
+
+
+ }
+
+
+	
+
+
+ .comments {
+
+
+   margin-top: 10px;
+
+
+ }
+
+
+
+
+
+
+
+ .read-more {
+
+
+   text-transform: uppercase;
+
+
+   font-size: 15px;
+
+
+ }
+
+
 }
+
+
+
+
+
+
 
 .wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+
+
+ margin-top: 50px;
+
+
+ border-top: 1px solid #ddd;
+
+
+ border-bottom: 1px solid #ddd;
+
+
+ background-color: $lightGray;
+
+
 }
+
+
+
+
+
+
 
 footer {
-  padding: 20px 0;
-  text-align: center;
+
+
+ padding: 20px 0;
+
+
+ text-align: center;
+
+
 }
 
+
+
+
+
+
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
+
+
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
+
+
 @import "highlights";
+
+
 @import "svg-icons";
+
